@@ -1,3 +1,9 @@
+procps-3.1.11 --> procps-3.1.12
+
+RPM generation handles /lib64
+WCHAN skips leading '.'
+vmstat: numerous new features
+
 procps-3.1.10 --> procps-3.1.11
 
 compile with gcc 2.95 again (C99 issue)
